--- a/requirements.txt
+++ b/requirements.txt
@@ -34,6 +34,7 @@ scikit-image>=0.22.0
 # Export Formats
 ezdxf>=1.1.0
 pyshp>=2.3.1
+reportlab>=4.0.0
 
 # Utilities
 python-jose[cryptography]>=3.3.0
